--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       name="author"
       content="thomas durand (@reeves-48777)"
     />
-    <title>Chroma React</title>
+    <title>Chroma</title>
   </head>
   <body>
     <div id="root"></div>
