--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/rainbow.webp"
+      href="/favicon.ico"
+    />
+    <link
+      rel="manifest"
+      href="/manifest.json"
     />
     <meta
       name="viewport"
